k8s/base/hr-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: hr-service
  namespace: hr
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
    - port:
        number: 8080
        name: http
        protocol: HTTP
      hosts:
        - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: hr-service
spec:
  hosts:
    - "*"
  gateways:
    - hr-service
  http:
    - match:
        - uri:
            exact: /hr-service
        - uri:
            prefix: /api/v1/products
      route:
        - destination:
            host: hrservice-dev
            port:
              number: 8080
